--- a/style.css
+++ b/style.css
@@ -3,7 +3,13 @@
     margin: 0;
     padding:0;
 }
+dd, h2{
+    margin-left:30px;
+}
 
+ul {
+    list-style-type: none;
+    }
 
 #contenitore{
     padding-bottom: 10px;
@@ -21,6 +27,7 @@
     margin-right: 15%;
     border-radius: 5px;
     font-family: 'Poppins', sans-serif;
+    padding-bottom: 10px;
 }
 
 
@@ -82,4 +89,82 @@
     color:red;
     border:1px solid red;
     border-radius:50%;
+}
+
+.rettangolino-blu{
+    background-color:rgb(112, 104, 233);
+    border: none;
+    border-radius: 4px;
+    width: 80px;
+    height: 20px;
+    padding:5px;
+    text-align: center;
+    margin-bottom:20px;
+    font-size: 10px;
+    color:white;
+}
+
+.rettangolino-viola{
+    background-color:rgb(173, 87, 166);
+    border: none;
+    border-radius: 4px;
+    width: 80px;
+    height: 20px;
+    padding:5px;
+    text-align: center;
+    margin-bottom:20px;
+    font-size: 10px;
+    color:white;
+}
+
+.rettangolino-verde{
+    background-color:rgb(69, 196, 90);
+    border: none;
+    border-radius: 4px;
+    width: 80px;
+    height: 20px;
+    padding:5px;
+    text-align: center;
+    margin-bottom:20px;
+    font-size: 10px;
+    color:white;
+}
+
+.rettangolino-arancione{
+    background-color:orange;
+    border: none;
+    border-radius: 4px;
+    width: 80px;
+    height: 20px;
+    padding:5px;
+    text-align: center;
+    margin-bottom:20px;
+    font-size: 10px;
+    color:white;
+}
+
+.rettangolino-violetto{
+    background-color:rgb(99, 61, 84);
+    border: none;
+    border-radius: 4px;
+    width: 80px;
+    height: 20px;
+    padding:5px;
+    text-align: center;
+    margin-bottom:20px;
+    font-size: 10px;
+    color:white;
+}
+
+.rettangolino-verdescuro{
+    background-color:rgb(24, 107, 28);
+    border: none;
+    border-radius: 4px;
+    width: 80px;
+    height: 20px;
+    padding:5px;
+    text-align: center;
+    margin-bottom:20px;
+    font-size: 10px;
+    color:white;
 }
